minio/6-minio-services.yaml
apiVersion: v1
kind: Service
metadata:
  # This name uniquely identifies the service
  name: minio-service
  namespace: minio-system
spec:
  type: ClusterIP
  ports:
    - name: minio
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: minio-console
      port: 9001
      protocol: TCP
  selector:
    # Looks for labels `app:minio` in the namespace and applies the spec
    app: minio
